[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "TESS"
version = "0.0.1"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "Temperature Estimation from SAR Simulation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["SimpleITK","scipy","pygrappa @ git+https://github.com:abhishekpandey127/pygrappa.git","cloudmrhub @ git+https://github.com/cloudmrhub-com/cloudmrhub.git","raider_eros_montin @ git+https://github.com/erosmontin/raider.git","pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git","pyable_eros_montin @ git+https://github.com/erosmontin/pyable.git"]

[project.urls]
"Homepage" = "https://github.com/cloudmrhub-com/TESSCU"
"Bug Tracker" = "https://github.com/cloudmrhub-com/TESSCU/issues"